# ashiba-verify

./: .gitignore  NOTICE  README.md  TRACES.md  pyproject.toml
ashiba_verify/: __init__.py  freivalds.py  nan_inf.py  oob.py  reduction_order.py  shape_polymorphism.py
examples/: benchmark_overhead.py  benchmark_overhead_sweep.py  compare_naive_vs_batched.py  plot_overhead_curves.py  sensitivity_analysis.py
tests/: test_freivalds.py  test_nan_inf.py  test_oob.py  test_reduction_order.py  test_shape_polymorphism.py
traces/: 2026-04-22_false_positive_h100.jsonl  2026-04-22_fp64_divergence_h100.jsonl  2026-04-22_fp64_divergence_mi300x.jsonl  2026-04-22_naive_vs_batched.jsonl  2026-04-22_naive_vs_batched_h100.jsonl  2026-04-22_naive_vs_batched_large_h100.jsonl  2026-04-22_naive_vs_batched_large_mi300x.jsonl  2026-04-22_naive_vs_batched_mi300x.jsonl  2026-04-22_overhead_sweep_bf16_h100.jsonl  2026-04-22_overhead_sweep_bf16_mi300x.jsonl  2026-04-22_overhead_sweep_h100.jsonl  2026-04-22_overhead_sweep_m5.jsonl  2026-04-22_overhead_sweep_mi300x.jsonl  2026-04-22_sensitivity_analysis.jsonl  2026-04-22_sensitivity_h100.jsonl  2026-04-22_sensitivity_large_h100.jsonl  2026-04-22_sensitivity_large_mi300x.jsonl  2026-04-22_sensitivity_mi300x.jsonl
