[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ashiba-verify"
version = "0.5.0"
description = "Reference verifiers for ML kernel contract classes across silicon"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Cooper Veit", email = "cv@ashibaresearch.com" },
]
keywords = ["freivalds", "gemm", "verification", "ml", "silicon", "kernel-contracts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.urls]
Homepage = "https://ashibaresearch.com"
Repository = "https://github.com/cv700/ashiba-verify"
Paper = "https://arxiv.org/abs/2604.22032"

[tool.setuptools.packages.find]
where = ["."]
include = ["ashiba_verify*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
